Fix overworld oregen, rename some effects, add some effects.

--- a/src/main/resources/assets/shungite/lang/en_us.json
+++ b/src/main/resources/assets/shungite/lang/en_us.json
@@ -4,6 +4,9 @@
   "item.shungite.shungite": "Shungite",
   "item.shungite.dowsing_rod": "Shungite Dowsing Rod",
   "block.shungite.shungite_crystal_ore": "Shungite Crystal Ore",
+  "block.shungite.deepslate_shungite_crystal_ore": "Deepslate Shungite Crystal Ore",
+  "block.shungite.netherrack_shungite_crystal_ore": "Netherrack Shungite Crystal Ore",
+  "block.shungite.end_shungite_crystal_ore": "End Shungite Crystal Ore",
 
   "info.shungite.energy": "Energy",
   "info.shungite.stats": "Stats",
@@ -12,6 +15,6 @@
   "info.shungite.dowsing_rod_no_ores_found": "No shungite ores found!",
   "info.shungite.dowsing_rod_ores_found": "Detected %s shungite nodes within %s blocks.",
 
-  "effect.shungite.hydrated": "Crystal Fluidity",
+  "effect.shungite.dexterous": "Dexterous",
   "effect.shungite.5g_aura": "5G Aura"
 }
